--- a/kerberos/main.yaml
+++ b/kerberos/main.yaml
@@ -1,21 +1,47 @@
-#- hosts: preflight
-#  tasks:
-#  - import_role:
-#      name: confluent.preflight
-#    become: yes
+- hosts: preflight
+  become: yes
+  pre_tasks:
+  - name: create ssl certificate directory
+    file:
+       path: /var/ssl/private
+       state: directory
+       mode: 0755
+  - name: copy ssl related files to host
+    synchronize:
+       src: generated_ssl_files/
+       dest: /var/ssl/private
+       rsync_opts:
+       - "--include={{inventory_hostname}}*"
+       - "--delete"
+  tasks:
+  - import_role:
+      name: confluent.preflight
+    become: yes
 - hosts: zookeeper
+  become: yes
   pre_tasks:
   tasks:
   - import_role:
       name: confluent.zookeeper
-    become: yes
 - hosts: broker
+  become: yes
+  pre_tasks:
+  - name: create ssl certificate directory
+    file:
+       path: /var/ssl/private
+       state: directory
+       mode: 0755
+  - name: copy ssl related files to host
+    synchronize:
+       src: generated_ssl_files/
+       dest: /var/ssl/private
+     
   tasks:
   - import_role:
       name: confluent.kafka-broker
-    become: yes
 - hosts: control-center
+  become: yes
+     
   tasks:
   - import_role:
       name: confluent.control-center
-    become: yes
