--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .project
 **/hosts.csv
-**/generated_ssl_files/*
+**/generated_ssl_files/*.jks
+**/generated_ssl_files/*.crt
+**/generated_ssl_files/*.csr
+**/generated_ssl_files/*.key
+**/generated_ssl_files/*.srl
