Added Connect to SSL

--- a/ssl_advance/main.yaml
+++ b/ssl_advance/main.yaml
@@ -17,21 +17,29 @@
   - import_role:
       name: confluent.preflight
     become: yes
+    
 - hosts: zookeeper
   become: yes
   pre_tasks:
   tasks:
   - import_role:
       name: confluent.zookeeper
+      
 - hosts: broker
   become: yes
-     
   tasks:
   - import_role:
       name: confluent.kafka-broker
+      
 - hosts: control-center
   become: yes
-     
   tasks:
   - import_role:
       name: confluent.control-center
+
+      
+- hosts: connect-distributed
+  become: yes
+  tasks:
+  - import_role:
+      name: confluent.connect-distributed
