--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .project
 **/hosts.csv
-**/generated_ssl_files/*.jks
-**/generated_ssl_files/*.crt
-**/generated_ssl_files/*.csr
-**/generated_ssl_files/*.key
-**/generated_ssl_files/*.srl
+**/*.jks
+**/*.crt
+**/*.csr
+**/*.key
+**/*.srl
 *.keytab
 .DS_Store
