--- a/plaintext/main.yaml
+++ b/plaintext/main.yaml
@@ -1,21 +1,67 @@
-#- hosts: preflight
-#  tasks:
-#  - import_role:
-#      name: confluent.preflight
-#    become: yes
-- hosts: zookeeper
+- name: Schema Registry Provisioning
+  hosts: preflight
+  tags: preflight
+  tasks:
+  - import_role:
+      name: confluent.common
+    become: yes
+    
+- name: Zookeeper Provisioning
+  hosts: zookeeper
+  tags: zookeeper
   pre_tasks:
   tasks:
   - import_role:
       name: confluent.zookeeper
     become: yes
-- hosts: broker
+    
+- name: Kafka Broker Provisioning
+  hosts: kafka_broker
+  tags: kafka_broker
   tasks:
   - import_role:
-      name: confluent.kafka-broker
+      name: confluent.kafka_broker
     become: yes
-- hosts: control-center
+    
+- name: Control Center Provisioning
+  hosts: control_center
+  tags: control_center
   tasks:
   - import_role:
-      name: confluent.control-center
+      name: confluent.control_center
+    become: yes
+    
+- name: Kafka Connect Provisioning
+  hosts: kafka_connect
+  tags: kafka_connect
+  tasks:
+  - import_role:
+      name: confluent.kafka_connect
+    become: yes
+
+- name: Schema Registry Provisioning
+  hosts: schema_registry
+  tags:
+    - schema_registry
+  tasks:
+  - import_role:
+      name: confluent.schema_registry
+    become: yes
+      
+- name: KSQL Provisioning
+  hosts: ksql
+  tags:
+    - ksql
+  tasks:
+  - import_role:
+      name: confluent.ksql
+    become: yes
+      
+- name: Kafka Rest Provisioning
+  hosts: kafka_rest
+  tags:
+    - kafka_rest
+  tasks:
+  - import_role:
+      name: confluent.kafka_rest
     become: yes
