--- a/ssl_mutual/main.yaml
+++ b/ssl_mutual/main.yaml
@@ -1,12 +1,16 @@
-- hosts: preflight
+- name: Schema Registry Provisioning
+  hosts: preflight
+  tags: preflight
   become: yes
   pre_tasks:
+#Copy SSL JKS Keystores to resptive hosts
+#Have to do this ourselfs vs using a role. So we only upload the needed JKS files to the resptive hosts.
   - name: create ssl certificate directory
     file:
        path: /var/ssl/private
        state: directory
        mode: 0755
-  - name: copy ssl related files to host
+  - name: copy ssl related files to host 
     synchronize:
        src: ssl-certs/
        dest: /var/ssl/private
@@ -15,31 +19,65 @@
        - "--delete"
   tasks:
   - import_role:
-      name: confluent.preflight
+      name: confluent.common
     become: yes
     
-- hosts: zookeeper
-  become: yes
+- name: Zookeeper Provisioning
+  hosts: zookeeper
+  tags: zookeeper
   pre_tasks:
   tasks:
   - import_role:
       name: confluent.zookeeper
-      
-- hosts: broker
-  become: yes
+    become: yes
+    
+- name: Kafka Broker Provisioning
+  hosts: kafka_broker
+  tags: kafka_broker
   tasks:
   - import_role:
-      name: confluent.kafka-broker
-      
-- hosts: control-center
-  become: yes
+      name: confluent.kafka_broker
+    become: yes
+    
+- name: Control Center Provisioning
+  hosts: control_center
+  tags: control_center
   tasks:
   - import_role:
-      name: confluent.control-center
+      name: confluent.control_center
+    become: yes
+    
+- name: Kafka Connect Provisioning
+  hosts: kafka_connect_ssl
+  tags: kafka_connect
+  tasks:
+  - import_role:
+      name: confluent.kafka_connect
+    become: yes
 
-      
-- hosts: connect-distributed
-  become: yes
+- name: Schema Registry Provisioning
+  hosts: schema_registry_ssl
+  tags:
+    - schema_registry
   tasks:
   - import_role:
-      name: confluent.connect-distributed
+      name: confluent.schema_registry
+    become: yes
+      
+- name: KSQL Provisioning
+  hosts: ksql_ssl
+  tags:
+    - ksql
+  tasks:
+  - import_role:
+      name: confluent.ksql
+    become: yes
+      
+- name: Kafka Rest Provisioning
+  hosts: kafka_rest
+  tags:
+    - kafka_rest
+  tasks:
+  - import_role:
+      name: confluent.kafka_rest
+    become: yes
