--- a/ssl_oneway/hosts.yaml
+++ b/ssl_oneway/hosts.yaml
@@ -88,8 +88,6 @@ control_center:
             confluent.controlcenter.rest.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
             confluent.controlcenter.rest.ssl.keystore.password: "{{all_ssl_password}}"
             confluent.controlcenter.rest.ssl.key.password: "{{all_ssl_password}}"
-            confluent.controlcenter.rest.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
-            confluent.controlcenter.rest.ssl.truststore.password: "{{all_ssl_password}}"
             #Broker Specific Configs
             confluent.controlcenter.streams.security.protocol: SSL
             confluent.controlcenter.streams.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
@@ -118,8 +116,6 @@ kafka_connect_ssl: #Have to rename the group to do issues in the ControlCenter r
             rest.advertised.listener: HTTPS
             rest.advertised.host.name: "{{inventory_hostname}}"
             listeners.https.ssl.client.auth: 'false'
-            listeners.https.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
-            listeners.https.ssl.truststore.password: "{{all_ssl_password}}"
             listeners.https.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
             listeners.https.ssl.keystore.password: "{{all_ssl_password}}"
             listeners.https.ssl.key.password: "{{all_ssl_password}}"
@@ -129,9 +125,6 @@ kafka_connect_ssl: #Have to rename the group to do issues in the ControlCenter r
             ssl.client.auth: 'false'
             ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             ssl.truststore.password: "{{all_ssl_password}}"
-            ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            ssl.keystore.password: "{{all_ssl_password}}"
-            ssl.key.password: "{{all_ssl_password}}"
             #Schema Registry related configs
             value.converter.schema.registry.url: "{% for host in groups['schema_registry_ssl'] %}{% if loop.index > 1%},{% endif %}https://{{ host }}:8081{% endfor %}"
             key.converter.schema.registry.url: "{% for host in groups['schema_registry_ssl'] %}{% if loop.index > 1%},{% endif %}https://{{ host }}:8081{% endfor %}"
@@ -139,30 +132,18 @@ kafka_connect_ssl: #Have to rename the group to do issues in the ControlCenter r
             producer.security.protocol: SSL
             producer.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             producer.ssl.truststore.password: "{{all_ssl_password}}"
-            producer.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            producer.ssl.keystore.password: "{{all_ssl_password}}"
-            producer.ssl.key.password: "{{all_ssl_password}}"
             #Default Producer Metrics Interceptor Configs
             producer.confluent.monitoring.interceptor.security.protocol: SSL
             producer.confluent.monitoring.interceptor.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             producer.confluent.monitoring.interceptor.ssl.truststore.password: "{{all_ssl_password}}"
-            producer.confluent.monitoring.interceptor.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            producer.confluent.monitoring.interceptor.ssl.keystore.password: "{{all_ssl_password}}"
-            producer.confluent.monitoring.interceptor.ssl.key.password: "{{all_ssl_password}}"
             #Default Consumer Configuration
             consumer.security.protocol: SSL
             consumer.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             consumer.ssl.truststore.password: "{{all_ssl_password}}"
-            consumer.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            consumer.ssl.keystore.password: "{{all_ssl_password}}"
-            consumer.ssl.key.password: "{{all_ssl_password}}"
             #Default Consumer Metrics Interceptor Configs
             consumer.confluent.monitoring.interceptor.security.protocol: SSL
             consumer.confluent.monitoring.interceptor.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             consumer.confluent.monitoring.interceptor.ssl.truststore.password: "{{all_ssl_password}}"
-            consumer.confluent.monitoring.interceptor.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            consumer.confluent.monitoring.interceptor.ssl.keystore.password: "{{all_ssl_password}}"
-            consumer.confluent.monitoring.interceptor.ssl.key.password: "{{all_ssl_password}}"
                   
 schema_registry_ssl:
    hosts:
@@ -175,12 +156,10 @@ schema_registry_ssl:
          properties:
             listeners: https://0.0.0.0:8081
             host.name: "{{inventory_hostname}}"
-            #SSL Specific Configs
+            #REST SSL Specific Configs
             ssl.client.auth: 'false'
             inter.instance.protocol: https
             security.protocol: SSL
-            ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
-            ssl.truststore.password: "{{all_ssl_password}}"
             ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
             ssl.keystore.password: "{{all_ssl_password}}"
             ssl.key.password: "{{all_ssl_password}}"
@@ -189,9 +168,6 @@ schema_registry_ssl:
             kafkastore.bootstrap.servers: "{% for host in groups['kafka_broker'] %}{% if loop.index > 1%},{% endif %}SSL://{{ host }}:{{kafka_port}}{% endfor %}"
             kafkastore.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             kafkastore.ssl.truststore.password: "{{all_ssl_password}}"
-            kafkastore.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            kafkastore.ssl.keystore.password: "{{all_ssl_password}}"
-            kafkastore.ssl.key.password: "{{all_ssl_password}}"
       
 ksql_ssl:
    hosts:
@@ -206,8 +182,6 @@ ksql_ssl:
             listeners: https://0.0.0.0:8088
             #REST SSL Secific Configs
             ssl.client.auth: 'false'
-            ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
-            ssl.truststore.password: "{{all_ssl_password}}"
             ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
             ssl.keystore.password: "{{all_ssl_password}}"
             ssl.key.password: "{{all_ssl_password}}"
@@ -215,9 +189,6 @@ ksql_ssl:
             ksql.streams.security.protocol: SSL
             ksql.streams.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             ksql.streams.ssl.truststore.password: "{{all_ssl_password}}"
-            ksql.streams.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            ksql.streams.ssl.keystore.password: "{{all_ssl_password}}"
-            ksql.streams.ssl.key.password: "{{all_ssl_password}}"
             ksql.internal.topic.replicas: 3
             ksql.streams.replication.factor: 3
             ksql.streams.state.dir: "{{streamsDataDir}}"
@@ -226,9 +197,6 @@ ksql_ssl:
             ksql.schema.registry.url: "{% for host in groups['schema_registry_ssl'] %}{% if loop.index > 1%},{% endif %}https://{{ host }}:8081{% endfor %}"
             ksql.schema.registry.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             ksql.schema.registry.ssl.truststore.password: "{{all_ssl_password}}"
-            ksql.schema.registry.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            ksql.schema.registry.ssl.keystore.password: "{{all_ssl_password}}"
-            ksql.schema.registry.ssl.key.password: "{{all_ssl_password}}"
             #Producer Specific Configs
             producer.interceptor.classes: io.confluent.monitoring.clients.interceptor.MonitoringProducerInterceptor
             ksql.streams.producer.delivery.timeout.ms: 2147483647
@@ -239,9 +207,6 @@ ksql_ssl:
             confluent.monitoring.interceptor.security.protocol: SSL
             confluent.monitoring.interceptor.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             confluent.monitoring.interceptor.ssl.truststore.password: "{{all_ssl_password}}"
-            confluent.monitoring.interceptor.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            confluent.monitoring.interceptor.ssl.keystore.password: "{{all_ssl_password}}"
-            confluent.monitoring.interceptor.ssl.key.password: "{{all_ssl_password}}"
       
 kafka_rest:
    hosts:
@@ -255,8 +220,6 @@ kafka_rest:
             host.name: "{{inventory_hostname}}"
             #REST SSL Specific Configs
             ssl.client.auth: 'false'
-            ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
-            ssl.truststore.password: "{{all_ssl_password}}"
             ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
             ssl.keystore.password: "{{all_ssl_password}}"
             ssl.key.password: "{{all_ssl_password}}"
@@ -264,14 +227,8 @@ kafka_rest:
             client.security.protocol: SSL
             client.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             client.ssl.truststore.password: "{{all_ssl_password}}"
-            client.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            client.ssl.keystore.password: "{{all_ssl_password}}"
-            client.ssl.key.password:  "{{all_ssl_password}}"
             #Schema Registry Specific Configs
             schema.registry.url: "{% for host in groups['schema_registry_ssl'] %}{% if loop.index > 1%},{% endif %}https://{{ host }}:8081{% endfor %}"
             schema.registry.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             schema.registry.ssl.truststore.password: "{{all_ssl_password}}"
-            schema.registry.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
-            schema.registry.ssl.keystore.password: "{{all_ssl_password}}"
-            schema.registry.ssl.key.password: "{{all_ssl_password}}"
             
