--- a/ssl_mutual/hosts.yaml
+++ b/ssl_mutual/hosts.yaml
@@ -59,7 +59,7 @@ kafka_broker:
             default.replication.factor: 3
             listeners: "PLAINTEXT://:9092,SSL://:9093"
             #SSL Specific Configs
-            ssl.client.auth: none
+            ssl.client.auth: required #Forces all clients to auth via SSL/TLS trust
             security.inter.broker.protocol: SSL
             ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             ssl.truststore.password: "{{all_ssl_password}}"
@@ -74,6 +74,9 @@ kafka_broker:
             confluent.metrics.reporter.bootstrap.servers: "{{inventory_hostname}}:9093"
             confluent.metrics.reporter.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             confluent.metrics.reporter.ssl.truststore.password: "{{all_ssl_password}}"
+            confluent.metrics.reporter.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
+            confluent.metrics.reporter.ssl.keystore.password: "{{all_ssl_password}}"
+            confluent.metrics.reporter.ssl.key.password: "{{all_ssl_password}}"
             
 control_center:
    hosts:
@@ -94,6 +97,9 @@ control_center:
             confluent.controlcenter.streams.security.protocol: SSL
             confluent.controlcenter.streams.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             confluent.controlcenter.streams.ssl.truststore.password: "{{all_ssl_password}}"
+            confluent.controlcenter.streams.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
+            confluent.controlcenter.streams.ssl.keystore.password: "{{all_ssl_password}}"
+            confluent.controlcenter.streams.ssl.key.password: "{{all_ssl_password}}"
             #KSQL Specific Configs
             confluent.controlcenter.ksql.enable: 'true' #Set this to false so we can use HTTPS
             confluent.controlcenter.ksql.url: "https://{{ groups['ksql_ssl'][0] }}:8088"
@@ -117,16 +123,15 @@ kafka_connect_ssl: #Have to rename the group to do issues in the ControlCenter r
             #REST SSL Specific Configs
             rest.advertised.listener: HTTPS
             rest.advertised.host.name: "{{inventory_hostname}}"
-            listeners.https.ssl.client.auth: 'false'
+            listeners.https.ssl.client.auth: 'false' #Set to true if you wish to force Client SSL Authentication
             listeners.https.ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             listeners.https.ssl.truststore.password: "{{all_ssl_password}}"
             listeners.https.ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
             listeners.https.ssl.keystore.password: "{{all_ssl_password}}"
             listeners.https.ssl.key.password: "{{all_ssl_password}}"
             #Broker Specific Configs
-            #NOTE: If the above are not provided these will be used to HTTPS
+            #NOTE: If the above are not provided these will be used for HTTPS
             security.protocol: SSL
-            ssl.client.auth: 'false'
             ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             ssl.truststore.password: "{{all_ssl_password}}"
             ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
@@ -176,7 +181,7 @@ schema_registry_ssl:
             listeners: https://0.0.0.0:8081
             host.name: "{{inventory_hostname}}"
             #SSL Specific Configs
-            ssl.client.auth: 'false'
+            ssl.client.auth: 'false' #Set to true if you wish to force Client SSL Authentication
             inter.instance.protocol: https
             security.protocol: SSL
             ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
@@ -205,7 +210,7 @@ ksql_ssl:
          properties:
             listeners: https://0.0.0.0:8088
             #REST SSL Secific Configs
-            ssl.client.auth: 'false'
+            ssl.client.auth: 'false' #Set to true if you wish to force Client SSL Authentication
             ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             ssl.truststore.password: "{{all_ssl_password}}"
             ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
@@ -254,7 +259,7 @@ kafka_rest:
             listeners: https://0.0.0.0:8082
             host.name: "{{inventory_hostname}}"
             #REST SSL Specific Configs
-            ssl.client.auth: 'false'
+            ssl.client.auth: 'false' #Set to true if you wish to force Client SSL Authentication
             ssl.truststore.location: /var/ssl/private/{{inventory_hostname}}.truststore.jks
             ssl.truststore.password: "{{all_ssl_password}}"
             ssl.keystore.location: /var/ssl/private/{{inventory_hostname}}.keystore.jks
