--- a/ssl_oneway/main.yaml
+++ b/ssl_oneway/main.yaml
@@ -1,23 +1,9 @@
-- name: Schema Registry Provisioning
-  hosts: preflight
+- name: Host Provisioning
+  hosts: zookeeper:kafka_broker:schema_registry:kafka_connect:ksql:control_center:kafka_rest
   tags: preflight
-  become: yes
-  pre_tasks:
-#Copy SSL JKS Keystores to resptive hosts
-#Have to do this ourselfs vs using a role. So we only upload the needed JKS files to the resptive hosts.
-  - name: create ssl certificate directory
-    file:
-       path: /var/ssl/private
-       state: directory
-       mode: 0755
-  - name: copy ssl related files to host 
-    synchronize:
-       src: ssl-certs/
-       dest: /var/ssl/private
-       rsync_opts:
-       - "--include={{inventory_hostname}}*"
-       - "--delete"
   tasks:
+  - import_role:
+      name: confluent.variables_handlers
   - import_role:
       name: confluent.common
     become: yes
