--- a/sasl_scram/main.yaml
+++ b/sasl_scram/main.yaml
@@ -1,23 +1,9 @@
-- name: Schema Registry Provisioning
-  hosts: preflight
+- name: Host Provisioning
+  hosts: zookeeper:kafka_broker:schema_registry:kafka_connect:ksql:control_center:kafka_rest
   tags: preflight
-  become: yes
-  pre_tasks:
-#Copy SSL JKS Keystores to resptive hosts
-#Have to do this ourselfs vs using a role. So we only upload the needed JKS files to the resptive hosts.
-  - name: create ssl certificate directory
-    file:
-       path: /var/ssl/private
-       state: directory
-       mode: 0755
-  - name: copy ssl related files to host 
-    synchronize:
-       src: ssl-certs/
-       dest: /var/ssl/private
-       rsync_opts:
-       - "--include={{inventory_hostname}}*"
-       - "--delete"
   tasks:
+  - import_role:
+      name: confluent.variables_handlers
   - import_role:
       name: confluent.common
     become: yes
@@ -34,24 +20,6 @@
 - name: Kafka Broker Provisioning
   hosts: kafka_broker
   tags: kafka_broker
-  pre_tasks:
-  - name: Broker JAAS File
-    template:
-       src: jaas.j2
-       dest: "/etc/kafka/kafka_jaas.conf"
-       mode: 0640
-       vars:
-          modules:
-          - name: KafkaServer
-            module: org.apache.kafka.common.security.scram.ScramLoginModule
-            pairs:
-               username: "admin"
-               password: "test"
-          - name: KafkaClient
-            module: org.apache.kafka.common.security.scram.ScramLoginModule
-            pairs:
-               username: "admin"
-               password: "test"
   tasks:
   - import_role:
       name: confluent.kafka_broker
