--- a/rbac_scram/main.yaml
+++ b/rbac_scram/main.yaml
@@ -1,65 +1,69 @@
-- hosts: preflight
-  become: yes
-  pre_tasks:
-  - name: create ssl certificate directory
-    file:
-       path: /var/ssl/private
-       state: directory
-       mode: 0755
-  - name: copy ssl related files to host
-    synchronize:
-       src: generated_ssl_files/
-       dest: /var/ssl/private
-       rsync_opts:
-       - "--include={{inventory_hostname}}*"
-       - "--delete"
+- name: Host Provisioning
+  hosts: zookeeper:kafka_broker:schema_registry:kafka_connect:ksql:control_center:kafka_rest
+  tags: preflight
   tasks:
   - import_role:
-      name: confluent.preflight
+      name: confluent.variables_handlers
+  - import_role:
+      name: confluent.common
     become: yes
     
-- hosts: zookeeper
-  become: yes
+- name: Zookeeper Provisioning
+  hosts: zookeeper
+  tags: zookeeper
   pre_tasks:
   tasks:
   - import_role:
       name: confluent.zookeeper
-      
-- hosts: broker
-  become: yes
-  pre_tasks:
-  - name: Broker JAAS File
-    template:
-       src: jaas.j2
-       dest: "/etc/kafka/kafka_jaas.conf"
-       mode: 0640
-       vars:
-          modules:
-          - name: KafkaServer
-            module: org.apache.kafka.common.security.plain.PlainLoginModule
-            pairs:
-               username: "admin"
-               password: "test"
-               user_admin: "admin"
-               user_kafkabroker: "broker1"
-          - name: KafkaClient
-            module: org.apache.kafka.common.security.plain.PlainLoginModule
-            pairs:
-               username: "admin"
-               password: "test"
+    become: yes
+    
+- name: Kafka Broker Provisioning
+  hosts: kafka_broker
+  tags: kafka_broker
   tasks:
   - import_role:
-      name: confluent.kafka-broker
-      
-- hosts: control-center
-  become: yes
+      name: confluent.kafka_broker
+    become: yes
+    
+- name: Control Center Provisioning
+  hosts: control_center
+  tags: control_center
   tasks:
   - import_role:
-      name: confluent.control-center
+      name: confluent.control_center
+    become: yes
+    
+- name: Kafka Connect Provisioning
+  hosts: kafka_connect_ssl
+  tags: kafka_connect
+  tasks:
+  - import_role:
+      name: confluent.kafka_connect
+    become: yes
 
-      
-- hosts: connect-distributed
-  become: yes
+- name: Schema Registry Provisioning
+  hosts: schema_registry_ssl
+  tags:
+    - schema_registry
   tasks:
   - import_role:
-      name: confluent.connect-distributed
+      name: confluent.schema_registry
+    become: yes
+      
+- name: KSQL Provisioning
+  hosts: ksql_ssl
+  tags:
+    - ksql
+  tasks:
+  - import_role:
+      name: confluent.ksql
+    become: yes
+      
+- name: Kafka Rest Provisioning
+  hosts: kafka_rest
+  tags:
+    - kafka_rest
+  tasks:
+  - import_role:
+      name: confluent.kafka_rest
+    become: yes
